fix(days-layout): fix align day number

--- a/src/css/CalendarDays.css
+++ b/src/css/CalendarDays.css
@@ -14,6 +14,9 @@
   padding: 0.5rem;
   min-height: 38px;
   max-height: 38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .calendar-days-numbers {
